# turso

./: .gitignore  Cargo.toml
bindings/zig/: README.md  build.zig  build.zig.zon
bindings/zig/src/: c.zig  connection.zig  database.zig  error.zig  root.zig  statement.zig  status.zig  sync.zig  sync_c.zig  value.zig
bindings/zig/tests/: async_io.zig  basic.zig  contention.zig  encryption.zig  errors.zig  file_backed.zig  high_level.zig  metadata.zig  multi_statement.zig  mvcc.zig  params.zig  regressions.zig  support.zig  sync_config.zig  sync_e2e.zig  types.zig
perf/bindings/: README.md  report.html  report.py  run.sh
perf/bindings/rust/: Cargo.toml
perf/bindings/rust/src/: main.rs
perf/bindings/zig/: build.zig
perf/bindings/zig/src/: main.zig
sdk-kit/: turso.h
sdk-kit/src/: bindings.rs  capi.rs
tasks/tursodb-zig-sdk/: parity.md
tasks/tursodb-zig-sdk/reviews/: subtask10.md  subtask8.md  subtask9.md
